gl33-master/src/test/deca/context/invalid/other/retourIncompatible3.deca
// Test de contexte invalide : valeur de retour fausse (string au lieu de int)

class MyClass{

    int isPos(int a){
        if(a > 0){
          return "true";
        }
        else{
          return "false";
        }
    }
}

{
    MyClass m = new MyClass();
    int x = m.isPos(4);
}
